--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Fee.ai - Automated Fee Management for Educational Institutes</title>
+  <title>DeltaPay - Automated Fee Management for Educational Institutes</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- Favicon -->
@@ -33,8 +33,7 @@
   <div class="container-fluid bg-light position-relative shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
       <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px">
-        <i class="flaticon-043-teddy-bear"></i>
-        <span class="text-primary">Fee.ai</span>
+        <span class="text-primary logo-text-main">DeltaPay</span>
       </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -60,10 +59,10 @@
       <div class="col-lg-6 text-center text-lg-left">
         <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
         <h3 class="display-4 font-weight-bold text-white">
-          FEE.AI: Automated Fee Management for Educational Institutes
+          DeltaPay: Automated Fee Management for Educational Institutes
         </h3>
         <p class="text-white mb-4">
-          Revolutionize the way your school or university collects and manages student fees with FEE.AI's cutting-edge
+          Revolutionize the way your school or university collects and manages student fees with DeltaPay's cutting-edge
           digital solution.
         </p>
         <a href="#" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
@@ -167,12 +166,13 @@
         <div class="col-lg-7">
           <p class="section-title px-5">
 
-          <h1 class="mb-4 mb-4-header">About Fee.ai</h1>
+          <h1 class="mb-4 mb-4-header">About DeltaPay</h1>
           <p>
-            FEE.AI is an innovative online fee management platform designed to streamline and automate the fee
-            collection process for educational institutes. Developed by a team of industry experts, FEE.AI leverages the
+            DeltaPay is an innovative online fee management platform designed to streamline and automate the fee
+            collection process for educational institutes. Developed by a team of industry experts, DeltaPay leverages
+            the
             latest technology to create a hassle-free experience for both administrators and parents. By digitalizing
-            and automating the entire fee management lifecycle, FEE.AI empowers schools and universities to focus on
+            and automating the entire fee management lifecycle, DeltaPay empowers schools and universities to focus on
             their core mission of providing exceptional education, while ensuring timely and efficient fee collection.
           </p>
 
@@ -197,7 +197,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Automatic Debit</h4>
               <p class="card-text">
-                FEE.AI's seamless integration with banking systems allows for the automatic deduction of fees from
+                DeltaPay's seamless integration with banking systems allows for the automatic deduction of fees from
                 parents' accounts, eliminating the need for manual processes and ensuring timely payments.
               </p>
             </div>
@@ -211,7 +211,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Intelligent Reminders</h4>
               <p class="card-text">
-                FEE.AI's advanced reminder system sends timely notifications to parents, helping them stay on top of
+                DeltaPay's advanced reminder system sends timely notifications to parents, helping them stay on top of
                 their payment schedules and avoid late fees or penalties.
               </p>
             </div>
@@ -225,7 +225,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Digital Receipting</h4>
               <p class="card-text">
-                FEE.AI provides electronic receipts for all fee payments, offering a comprehensive record of
+                DeltaPay provides electronic receipts for all fee payments, offering a comprehensive record of
                 transactions and streamlining the accounting process for the institute.
               </p>
             </div>
@@ -249,7 +249,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Flexible Installments</h4>
               <p class="card-text">
-                FEE.AI's EMI (Equated Monthly Installment) feature allows parents to pay their child's fees in
+                DeltaPay's EMI (Equated Monthly Installment) feature allows parents to pay their child's fees in
                 manageable monthly installments, making education more accessible and affordable. </p>
             </div>
 
@@ -260,7 +260,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Customized Plans</h4>
               <p class="card-text">
-                FEE.AI works closely with each institute to develop tailored EMI plans that cater to the diverse
+                DeltaPay works closely with each institute to develop tailored EMI plans that cater to the diverse
                 financial needs of their parent community, ensuring a seamless and inclusive fee payment experience.
               </p>
             </div>
@@ -272,7 +272,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Improved Cash Flow</h4>
               <p class="card-text">
-                By offering EMI options, FEE.AI helps educational institutes maintain a steady and predictable cash
+                By offering EMI options, DeltaPay helps educational institutes maintain a steady and predictable cash
                 flow, enabling them to better plan and allocate their resources for the benefit of their students.
               </p>
             </div>
@@ -297,7 +297,8 @@
             <div class="card-body text-center">
               <h4 class="card-title">Seamless ERP Integration</h4>
               <p class="card-text">
-                FEE.AI seamlessly integrates with leading Enterprise Resource Planning (ERP) systems, ensuring a smooth
+                DeltaPay seamlessly integrates with leading Enterprise Resource Planning (ERP) systems, ensuring a
+                smooth
                 and efficient flow of student and fee-related data between the two platforms. This integration
                 eliminates the need for manual data entry and reduces the risk of errors. </p>
             </div>
@@ -310,7 +311,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Powerful CRM Capabilities</h4>
               <p class="card-text">
-                FEE.AI's advanced Customer Relationship Management (CRM) features allow educational institutes to
+                DeltaPay's advanced Customer Relationship Management (CRM) features allow educational institutes to
                 maintain a comprehensive database of student and parent information, facilitating better communication,
                 personalized services, and targeted marketing efforts. </p>
             </div>
@@ -323,7 +324,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Seamless Data Exchange</h4>
               <p class="card-text">
-                The seamless integration between FEE.AI, ERPs, and CRMs creates a centralized and streamlined data
+                The seamless integration between DeltaPay, ERPs, and CRMs creates a centralized and streamlined data
                 ecosystem, enabling educational institutes to make informed decisions, improve operational efficiency,
                 and enhance the overall student and parent experience. </p>
             </div>
@@ -338,34 +339,34 @@
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-        <h1 class="mb-4 mb-4-header">How FEE.AI Works</h1>
+        <h1 class="mb-4 mb-4-header">How DeltaPay Works</h1>
 
         </p>
       </div>
       <ul>
-        <li style="--accent-color:#17a2b8">
+        <li style="--accent-color:#222222">
           <div class="date">Step 1</div>
           <div class="box-sec-content-step">
             <div class="title">Account Setup</div>
-            <div class="descr">FEE.AI's onboarding process is designed to be quick and straightforward, with dedicated
+            <div class="descr">DeltaPay's onboarding process is designed to be quick and straightforward, with dedicated
               support to help educational institutes configure the platform according to their specific requirements.
             </div>
           </div>
         </li>
-        <li style="--accent-color:#17a2b8">
+        <li style="--accent-color:#222222">
           <div class="date">Step 2</div>
           <div class="box-sec-content-step">
             <div class="title">Automated Debit Setup</div>
-            <div class="descr">FEE.AI's intelligent payment engine seamlessly integrates with banks, allowing for the
+            <div class="descr">DeltaPay's intelligent payment engine seamlessly integrates with banks, allowing for the
               automatic deduction of fees from parents' accounts on predetermined schedules.</div>
 
           </div>
         </li>
-        <li style="--accent-color:#17a2b8">
+        <li style="--accent-color:#222222">
           <div class="date">Step 3</div>
           <div class="box-sec-content-step">
             <div class="title">Reminders and Reporting</div>
-            <div class="descr">FEE.AI's robust reporting and notification system keeps administrators and parents
+            <div class="descr">DeltaPay's robust reporting and notification system keeps administrators and parents
               informed
               about payment status, outstanding dues, and other relevant fee-related information.</div>
 
@@ -383,7 +384,7 @@
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-        <h1 class="mb-4 mb-4-header">Benefits of FEE.AI</h1>
+        <h1 class="mb-4 mb-4-header">Benefits of DeltaPay</h1>
       </div>
       <div class="row">
         <div class="col-lg-6 mb-5">
@@ -391,7 +392,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Improved Cash Flow</h4>
               <p class="card-text">
-                FEE.AI's automated fee collection and EMI options help educational institutes maintain a steady and
+                DeltaPay's automated fee collection and EMI options help educational institutes maintain a steady and
                 predictable cash flow, enabling them to better plan and allocate their resources. </p>
             </div>
 
@@ -402,7 +403,8 @@
             <div class="card-body text-center">
               <h4 class="card-title">Enhanced Efficiency</h4>
               <p class="card-text">
-                By digitizing and automating the fee management process, FEE.AI helps educational institutes streamline
+                By digitizing and automating the fee management process, DeltaPay helps educational institutes
+                streamline
                 their operations, reduce administrative burdens, and focus on their core mission of providing quality
                 education. </p>
             </div>
@@ -414,7 +416,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Increased Parent Satisfaction</h4>
               <p class="card-text">
-                FEE.AI's user-friendly interface, flexible payment options, and transparent communication foster a
+                DeltaPay's user-friendly interface, flexible payment options, and transparent communication foster a
                 positive experience for parents, improving their overall satisfaction and engagement with the
                 educational institute. </p>
             </div>
@@ -426,7 +428,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Reduced Delinquencies</h4>
               <p class="card-text">
-                FEE.AI's intelligent reminders and seamless payment integration help reduce late payments and
+                DeltaPay's intelligent reminders and seamless payment integration help reduce late payments and
                 outstanding dues, ensuring timely fee collection and improved financial stability for the educational
                 institute.</p>
             </div>
@@ -581,13 +583,13 @@
     </div>
   </div> -->
   <!-- Footer Start -->
-  <div class="container-fluid bg-secondary text-white mt-5 py-3 px-sm-3 px-md-5">
+  <div class="container-fluid footer-bg-last bg-secondary text-white mt-5 py-3 px-sm-3 px-md-5">
     <div class="row pt-5">
       <div class="col-lg-4 col-md-6 mb-5">
         <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
           style="font-size: 40px; line-height: 40px">
           <i class="flaticon-043-teddy-bear"></i>
-          <span class="text-white">Fee.ai</span>
+          <span class="text-white">DeltaPay</span>
         </a>
         <p>
           If you're interested in learning more about how Pavpay can transform your educational institute's fee
@@ -610,21 +612,23 @@
           <h4 class="fa fa-map-marker-alt text-primary"></h4>
           <div class="pl-3">
             <h5 class="text-white">Address</h5>
-            <p>123 Main Street, Anytown, USA</p>
+            <p>#45, 9th Cross, JP Nagar, <br />
+              Bangalore - 560056
+            </p>
           </div>
         </div>
         <div class="d-flex">
           <h4 class="fa fa-envelope text-primary"></h4>
           <div class="pl-3">
             <h5 class="text-white">Email</h5>
-            <p>info@pavpay.com</p>
+            <p>info@deltapay.in</p>
           </div>
         </div>
         <div class="d-flex">
           <h4 class="fa fa-phone-alt text-primary"></h4>
           <div class="pl-3">
             <h5 class="text-white">Phone</h5>
-            <p>+012 345 67890</p>
+            <p> +91 805 080 7711</p>
           </div>
         </div>
       </div>
@@ -643,7 +647,7 @@
     <div class="container-fluid pt-3" style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
       <p class="m-0 text-center text-white">
         &copy;
-        All Rights Reserved Fee.ai
+        All Rights Reserved DeltaPay
 
       </p>
     </div>
