--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>DeltaPay - Automated Fee Management for Educational Institutes</title>
+  <title>Deltape - Automated Fee Management for Educational Institutes</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- Favicon -->
@@ -33,7 +33,7 @@
   <div class="container-fluid bg-light position-relative shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
       <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px">
-        <span class="text-primary logo-text-main">DeltaPay</span>
+        <span class="text-primary logo-text-main">Deltape</span>
       </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -59,10 +59,10 @@
       <div class="col-lg-6 text-center text-lg-left">
         <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
         <h3 class="display-4 font-weight-bold text-white">
-          DeltaPay: Automated Fee Management for Educational Institutes
+          Deltape: Automated Fee Management for Educational Institutes
         </h3>
         <p class="text-white mb-4">
-          Revolutionize the way your school or university collects and manages student fees with DeltaPay's cutting-edge
+          Revolutionize the way your school or university collects and manages student fees with Deltape's cutting-edge
           digital solution.
         </p>
         <a href="#" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
@@ -166,13 +166,13 @@
         <div class="col-lg-7">
           <p class="section-title px-5">
 
-          <h1 class="mb-4 mb-4-header">About DeltaPay</h1>
+          <h1 class="mb-4 mb-4-header">About Deltape</h1>
           <p>
-            DeltaPay is an innovative online fee management platform designed to streamline and automate the fee
-            collection process for educational institutes. Developed by a team of industry experts, DeltaPay leverages
+            Deltape is an innovative online fee management platform designed to streamline and automate the fee
+            collection process for educational institutes. Developed by a team of industry experts, Deltape leverages
             the
             latest technology to create a hassle-free experience for both administrators and parents. By digitalizing
-            and automating the entire fee management lifecycle, DeltaPay empowers schools and universities to focus on
+            and automating the entire fee management lifecycle, Deltape empowers schools and universities to focus on
             their core mission of providing exceptional education, while ensuring timely and efficient fee collection.
           </p>
 
@@ -197,7 +197,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Automatic Debit</h4>
               <p class="card-text">
-                DeltaPay's seamless integration with banking systems allows for the automatic deduction of fees from
+                Deltape's seamless integration with banking systems allows for the automatic deduction of fees from
                 parents' accounts, eliminating the need for manual processes and ensuring timely payments.
               </p>
             </div>
@@ -211,7 +211,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Intelligent Reminders</h4>
               <p class="card-text">
-                DeltaPay's advanced reminder system sends timely notifications to parents, helping them stay on top of
+                Deltape's advanced reminder system sends timely notifications to parents, helping them stay on top of
                 their payment schedules and avoid late fees or penalties.
               </p>
             </div>
@@ -225,7 +225,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Digital Receipting</h4>
               <p class="card-text">
-                DeltaPay provides electronic receipts for all fee payments, offering a comprehensive record of
+                Deltape provides electronic receipts for all fee payments, offering a comprehensive record of
                 transactions and streamlining the accounting process for the institute.
               </p>
             </div>
@@ -249,7 +249,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Flexible Installments</h4>
               <p class="card-text">
-                DeltaPay's EMI (Equated Monthly Installment) feature allows parents to pay their child's fees in
+                Deltape's EMI (Equated Monthly Installment) feature allows parents to pay their child's fees in
                 manageable monthly installments, making education more accessible and affordable. </p>
             </div>
 
@@ -260,7 +260,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Customized Plans</h4>
               <p class="card-text">
-                DeltaPay works closely with each institute to develop tailored EMI plans that cater to the diverse
+                Deltape works closely with each institute to develop tailored EMI plans that cater to the diverse
                 financial needs of their parent community, ensuring a seamless and inclusive fee payment experience.
               </p>
             </div>
@@ -272,7 +272,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Improved Cash Flow</h4>
               <p class="card-text">
-                By offering EMI options, DeltaPay helps educational institutes maintain a steady and predictable cash
+                By offering EMI options, Deltape helps educational institutes maintain a steady and predictable cash
                 flow, enabling them to better plan and allocate their resources for the benefit of their students.
               </p>
             </div>
@@ -297,7 +297,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Seamless ERP Integration</h4>
               <p class="card-text">
-                DeltaPay seamlessly integrates with leading Enterprise Resource Planning (ERP) systems, ensuring a
+                Deltape seamlessly integrates with leading Enterprise Resource Planning (ERP) systems, ensuring a
                 smooth
                 and efficient flow of student and fee-related data between the two platforms. This integration
                 eliminates the need for manual data entry and reduces the risk of errors. </p>
@@ -311,7 +311,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Powerful CRM Capabilities</h4>
               <p class="card-text">
-                DeltaPay's advanced Customer Relationship Management (CRM) features allow educational institutes to
+                Deltape's advanced Customer Relationship Management (CRM) features allow educational institutes to
                 maintain a comprehensive database of student and parent information, facilitating better communication,
                 personalized services, and targeted marketing efforts. </p>
             </div>
@@ -324,7 +324,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Seamless Data Exchange</h4>
               <p class="card-text">
-                The seamless integration between DeltaPay, ERPs, and CRMs creates a centralized and streamlined data
+                The seamless integration between Deltape, ERPs, and CRMs creates a centralized and streamlined data
                 ecosystem, enabling educational institutes to make informed decisions, improve operational efficiency,
                 and enhance the overall student and parent experience. </p>
             </div>
@@ -339,7 +339,7 @@
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-        <h1 class="mb-4 mb-4-header">How DeltaPay Works</h1>
+        <h1 class="mb-4 mb-4-header">How Deltape Works</h1>
 
         </p>
       </div>
@@ -348,7 +348,7 @@
           <div class="date">Step 1</div>
           <div class="box-sec-content-step">
             <div class="title">Account Setup</div>
-            <div class="descr">DeltaPay's onboarding process is designed to be quick and straightforward, with dedicated
+            <div class="descr">Deltape's onboarding process is designed to be quick and straightforward, with dedicated
               support to help educational institutes configure the platform according to their specific requirements.
             </div>
           </div>
@@ -357,7 +357,7 @@
           <div class="date">Step 2</div>
           <div class="box-sec-content-step">
             <div class="title">Automated Debit Setup</div>
-            <div class="descr">DeltaPay's intelligent payment engine seamlessly integrates with banks, allowing for the
+            <div class="descr">Deltape's intelligent payment engine seamlessly integrates with banks, allowing for the
               automatic deduction of fees from parents' accounts on predetermined schedules.</div>
 
           </div>
@@ -366,7 +366,7 @@
           <div class="date">Step 3</div>
           <div class="box-sec-content-step">
             <div class="title">Reminders and Reporting</div>
-            <div class="descr">DeltaPay's robust reporting and notification system keeps administrators and parents
+            <div class="descr">Deltape's robust reporting and notification system keeps administrators and parents
               informed
               about payment status, outstanding dues, and other relevant fee-related information.</div>
 
@@ -384,7 +384,7 @@
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-        <h1 class="mb-4 mb-4-header">Benefits of DeltaPay</h1>
+        <h1 class="mb-4 mb-4-header">Benefits of Deltape</h1>
       </div>
       <div class="row">
         <div class="col-lg-6 mb-5">
@@ -392,7 +392,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Improved Cash Flow</h4>
               <p class="card-text">
-                DeltaPay's automated fee collection and EMI options help educational institutes maintain a steady and
+                Deltape's automated fee collection and EMI options help educational institutes maintain a steady and
                 predictable cash flow, enabling them to better plan and allocate their resources. </p>
             </div>
 
@@ -403,7 +403,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Enhanced Efficiency</h4>
               <p class="card-text">
-                By digitizing and automating the fee management process, DeltaPay helps educational institutes
+                By digitizing and automating the fee management process, Deltape helps educational institutes
                 streamline
                 their operations, reduce administrative burdens, and focus on their core mission of providing quality
                 education. </p>
@@ -416,7 +416,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Increased Parent Satisfaction</h4>
               <p class="card-text">
-                DeltaPay's user-friendly interface, flexible payment options, and transparent communication foster a
+                Deltape's user-friendly interface, flexible payment options, and transparent communication foster a
                 positive experience for parents, improving their overall satisfaction and engagement with the
                 educational institute. </p>
             </div>
@@ -428,7 +428,7 @@
             <div class="card-body text-center">
               <h4 class="card-title">Reduced Delinquencies</h4>
               <p class="card-text">
-                DeltaPay's intelligent reminders and seamless payment integration help reduce late payments and
+                Deltape's intelligent reminders and seamless payment integration help reduce late payments and
                 outstanding dues, ensuring timely fee collection and improved financial stability for the educational
                 institute.</p>
             </div>
@@ -589,7 +589,7 @@
         <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
           style="font-size: 40px; line-height: 40px">
           <i class="flaticon-043-teddy-bear"></i>
-          <span class="text-white">DeltaPay</span>
+          <span class="text-white">Deltape</span>
         </a>
         <p>
           If you're interested in learning more about how Pavpay can transform your educational institute's fee
@@ -621,7 +621,7 @@
           <h4 class="fa fa-envelope text-primary"></h4>
           <div class="pl-3">
             <h5 class="text-white">Email</h5>
-            <p>info@deltapay.in</p>
+            <p>info@deltape.in</p>
           </div>
         </div>
         <div class="d-flex">
@@ -647,7 +647,7 @@
     <div class="container-fluid pt-3" style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
       <p class="m-0 text-center text-white">
         &copy;
-        All Rights Reserved DeltaPay
+        All Rights Reserved Deltape
 
       </p>
     </div>
