--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
   <!-- Customized Bootstrap Stylesheet -->
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/timeline.css" rel="stylesheet" />
-   <script type="text/javascript">
-        (function (f, b) {
-            if (!b.__SV) {
-                var e, g, i, h; window.mixpanel = b; b._i = []; b.init = function (e, f, c) {
-                    function g(a, d) { var b = d.split("."); 2 == b.length && (a = a[b[0]], d = b[1]); a[d] = function () { a.push([d].concat(Array.prototype.slice.call(arguments, 0))) } } var a = b; "undefined" !== typeof c ? a = b[c] = [] : c = "mixpanel"; a.people = a.people || []; a.toString = function (a) { var d = "mixpanel"; "mixpanel" !== c && (d += "." + c); a || (d += " (stub)"); return d }; a.people.toString = function () { return a.toString(1) + ".people (stub)" }; i = "disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
-                    for (h = 0; h < i.length; h++)g(a, i[h]); var j = "set set_once union unset remove delete".split(" "); a.get_group = function () { function b(c) { d[c] = function () { call2_args = arguments; call2 = [c].concat(Array.prototype.slice.call(call2_args, 0)); a.push([e, call2]) } } for (var d = {}, e = ["get_group"].concat(Array.prototype.slice.call(arguments, 0)), c = 0; c < j.length; c++)b(j[c]); return d }; b._i.push([e, f, c])
-                }; b.__SV = 1.2; e = f.createElement("script"); e.type = "text/javascript"; e.async = !0; e.src = "undefined" !== typeof MIXPANEL_CUSTOM_LIB_URL ?
-                    MIXPANEL_CUSTOM_LIB_URL : "file:" === f.location.protocol && "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//) ? "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js" : "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js"; g = f.getElementsByTagName("script")[0]; g.parentNode.insertBefore(e, g)
-            }
-        })(document, window.mixpanel || []);
+  <script type="text/javascript">
+    (function (f, b) {
+      if (!b.__SV) {
+        var e, g, i, h; window.mixpanel = b; b._i = []; b.init = function (e, f, c) {
+          function g(a, d) { var b = d.split("."); 2 == b.length && (a = a[b[0]], d = b[1]); a[d] = function () { a.push([d].concat(Array.prototype.slice.call(arguments, 0))) } } var a = b; "undefined" !== typeof c ? a = b[c] = [] : c = "mixpanel"; a.people = a.people || []; a.toString = function (a) { var d = "mixpanel"; "mixpanel" !== c && (d += "." + c); a || (d += " (stub)"); return d }; a.people.toString = function () { return a.toString(1) + ".people (stub)" }; i = "disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
+          for (h = 0; h < i.length; h++)g(a, i[h]); var j = "set set_once union unset remove delete".split(" "); a.get_group = function () { function b(c) { d[c] = function () { call2_args = arguments; call2 = [c].concat(Array.prototype.slice.call(call2_args, 0)); a.push([e, call2]) } } for (var d = {}, e = ["get_group"].concat(Array.prototype.slice.call(arguments, 0)), c = 0; c < j.length; c++)b(j[c]); return d }; b._i.push([e, f, c])
+        }; b.__SV = 1.2; e = f.createElement("script"); e.type = "text/javascript"; e.async = !0; e.src = "undefined" !== typeof MIXPANEL_CUSTOM_LIB_URL ?
+          MIXPANEL_CUSTOM_LIB_URL : "file:" === f.location.protocol && "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//) ? "https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js" : "//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js"; g = f.getElementsByTagName("script")[0]; g.parentNode.insertBefore(e, g)
+      }
+    })(document, window.mixpanel || []);
 
-        // Enabling the debug mode flag is useful during implementation,
-        // but it's recommended you remove it for production
-        mixpanel.init('95a7d87662871e48323b6c9f8b7311a4', { debug: true });
-        mixpanel.track('Page_on_loaded');
-    </script>
-  
+    // Enabling the debug mode flag is useful during implementation,
+    // but it's recommended you remove it for production
+    mixpanel.init('95a7d87662871e48323b6c9f8b7311a4', { debug: true });
+    mixpanel.track('Page_on_loaded');
+  </script>
+
 </head>
 
 <body>
   <!-- Navbar Start -->
   <div class="container-fluid bg-light position-relative shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
-      <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px">
+      <a href="" class="navbar-brand font-weight-bold text-secondary">
         <span class="text-primary logo-text-main">Deltape</span>
       </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -59,30 +59,75 @@
         <div class="navbar-nav font-weight-bold mx-auto py-0">
           <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
           <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
-          <a href="#Features" class="nav-item nav-link active">Features</a>
-          <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a>
-          <a href="#Benefits" class="nav-item nav-link active">Benefits</a>
+
+
+          <a href="#Features" class="nav-item nav-link active">For Institutes</a>
+          <a href="#Features" class="nav-item nav-link active">For Parents</a>
+          <!-- <a href="#Features" class="nav-item nav-link active">Features</a>
+          <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a> -->
+          <!-- <a href="#Benefits" class="nav-item nav-link active">Benefits</a> -->
           <a href="#Contact" class="nav-item nav-link active">Contact</a>
         </div>
-        <a href="#" class="btn btn-primary px-4">Book a Demo</a>
+        <!-- <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="gallery.html" class="dropdown-item">Gallery</a>
+                        <a href="feature.html" class="dropdown-item">Features</a>
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="404.html" class="dropdown-item active">404 Page</a>
+                    </div>
+                </div> -->
+        <div class="collapse--navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav--me-auto auto-main-drop-down mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle login-button-dropdown" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Login
+              </a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-parent-item"><a class="dropdown-item" target="_blank"
+                    href="https://partner.deltape.in">Login as Parent</a></li>
+                <li class="dropdown-institute-item"><a class="dropdown-item" target="_blank"
+                    href="https://customer.deltape.in">Login as Institute</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
-    </nav>
+
+      <!-- <a href
+          ="#" class="btn btn-primary px-4"> -->
+      <!-- <div class="nav-item dropdown">
+        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Login</a>
+        <div class="dropdown-menu rounded">
+          <a target="_blank" href="partner.deltape.in" class="dropdown-item">Login as Parent</a>
+          <a target="_blank" href="customer.deltape.in" class="dropdown-item">Login as Institute</a>
+        </div>
+      </div> -->
+      <!-- </a> -->
+      <!-- <a href="#" class="btn btn-primary px-4">Login as Parent</a> &nbsp;&nbsp;&nbsp;
+        <a href="#" class="btn btn-primary px-4">Login as Institute</a> -->
+
+
+  </div>
+  </nav>
   </div>
   <!-- Navbar End -->
 
   <!-- Header Start -->
-  <div class="container-fluid bg-primary px-0 px-md-5 mb-5">
+  <div class="container-fluid bg-primary-header px-0 px-md-5 mb-5">
     <div class="row align-items-center px-3">
       <div class="col-lg-6 text-center text-lg-left">
         <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
-        <h3 class="display-4 font-weight-bold text-white">
-          Deltape: Automated Fee Management for Educational Institutes
+        <h3 class="display-4 font-weight-bold main-top-header-text text-white">
+          Effortless Fee Payments, Every Time
         </h3>
         <p class="text-white mb-4">
           Revolutionize the way your school or university collects and manages student fees with Deltape's cutting-edge
           digital solution.
         </p>
-        <a href="#" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
+        <a href="#" class="btn btn-primary mt-1 py-3 px-5">Learn More</a>
       </div>
       <div class="col-lg-6 text-center text-lg-right">
         <img class="img-fluid main-img-sec mt-5" src="imgnew/fee_ai.png" alt="" />
@@ -254,11 +299,56 @@
     </div>
   </div>
   <!-- Class End -->
+  <div class="container-fluid pt-5 our-solutions-sec">
+    <div class="container">
+      <div class="text-center pb-2">
+        <p class="section-title px-5">
+        <h1 class="mb-4 mb-4-header">Our Solutions</h1>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 mb-5">
+          <div class="card border-0 bg-light shadow-sm pb-2">
+            <div class="card-body text-center">
+              <h4 class="card-title">Delta zero</h4>
+              <p class="card-text">
+                Deltape's EMI (Equated Monthly Installment) feature allows parents to pay their child's fees in
+                manageable monthly installments, making education more accessible and affordable. </p>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-lg-4 mb-5">
+          <div class="card border-0 bg-light shadow-sm pb-2">
+            <div class="card-body text-center">
+              <h4 class="card-title">Delta auto</h4>
+              <p class="card-text">
+                Deltape works closely with each institute to develop tailored EMI plans that cater to the diverse
+                financial needs of their parent community, ensuring a seamless and inclusive fee payment experience.
+              </p>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-lg-4 mb-5">
+          <div class="card border-0 bg-light shadow-sm pb-2">
+            <div class="card-body text-center">
+              <h4 class="card-title">Delta pay</h4>
+              <p class="card-text">
+                By offering EMI options, Deltape helps educational institutes maintain a steady and predictable cash
+                flow, enabling them to better plan and allocate their resources for the benefit of their students.
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container-fluid pt-5">
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
-        <h1 class="mb-4 mb-4-header">EMI Options for Parents</h1>
+        <h1 class="mb-4 mb-4-header">EMI Options for Parents </h1>
       </div>
       <div class="row">
         <div class="col-lg-4 mb-5">
@@ -602,14 +692,14 @@
   <!-- Footer Start -->
   <div class="container-fluid footer-bg-last bg-secondary text-white mt-5 py-3 px-sm-3 px-md-5">
     <div class="row pt-5">
-      <div class="col-lg-4 col-md-6 mb-5">
+      <div class="col-lg-3 col-md-6 mb-5">
         <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
           style="font-size: 40px; line-height: 40px">
           <i class="flaticon-043-teddy-bear"></i>
           <span class="text-white">Deltape</span>
         </a>
         <p>
-          If you're interested in learning more about how Pavpay can transform your educational institute's fee
+          If you're interested in learning more about how Deltape can transform your educational institute's fee
           management process, we'd love to hear from you.
         </p>
         <div class="d-flex justify-content-start mt-4">
@@ -623,7 +713,7 @@
             href="#"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 mb-5">
+      <div class="col-lg-3 col-md-6 mb-5">
         <h3 class="text-primary mb-4">Get In Touch</h3>
         <div class="d-flex">
           <h4 class="fa fa-map-marker-alt text-primary"></h4>
@@ -649,14 +739,23 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 mb-5 footer-quick-links">
+      <div class="col-lg-3 col-md-6 mb-5 footer-quick-links">
         <h3 class="text-primary mb-4">Quick Links</h3>
         <div class="d-flex flex-column justify-content-start">
+          <a href="/institutes.html" class="nav-item nav-link active">For Institutes</a>
+          <a href="/parents.html" class="nav-item nav-link active">For Parents</a>
+          <a target="_blank" href="https://partner.deltape.in" class="nav-item nav-link active">Login for Institutes</a>
+          <a target="_blank" href="https://customer.deltape.in" class="nav-item nav-link active">Login for Parents</a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 mb-5 footer-quick-links">
+        <h3 class="text-primary mb-4">Company</h3>
+        <div class="d-flex flex-column justify-content-start">
           <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
-          <a href="#Features" class="nav-item nav-link active">Features</a>
-          <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a>
-          <a href="#Benefits" class="nav-item nav-link active">Benefits</a>
-          <a href="#Contact" class="nav-item nav-link active">Contact</a>
+          <a href="#Contact" class="nav-item nav-link active">Grievance Redressal</a>
+          <a href="#Contact" class="nav-item nav-link active">Compliance</a>
+          <a href="#HowitWorks" class="nav-item nav-link active">Terms & Conditions</a>
+          <a href="#Benefits" class="nav-item nav-link active">Privacy Policy</a>
         </div>
       </div>
 
