--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <!-- <a href="#Features" class="nav-item nav-link active">Features</a>
           <a href="#HowitWorks" class="nav-item nav-link active">How it Works</a> -->
           <!-- <a href="#Benefits" class="nav-item nav-link active">Benefits</a> -->
-          <a href="#Contact" class="nav-item nav-link active">Contact</a>
+          <a href="#Contact" class="nav-item nav-link active">Contact Us</a>
         </div>
         <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
