--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
   <!-- Navbar Start -->
-  <div class="container-fluid bg-light position-relative shadow">
+  <div class="container-fluid bg-light position-fixed shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
       <a href="" class="navbar-brand font-weight-bold text-secondary">
         <span class="text-primary logo-text-main">Deltape</span>
@@ -56,7 +56,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-        <div class="navbar-nav font-weight-bold mx-auto py-0">
+        <div class="navbar-nav font-weight-bold font-weight-bold-sec-cont mx-auto py-0">
           <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
           <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
 
@@ -87,9 +87,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li class="dropdown-parent-item"><a class="dropdown-item" target="_blank"
-                    href="https://partner.deltape.in">Login as Parent</a></li>
+                    href="https://deltapay.in">Login as Parent</a></li>
                 <li class="dropdown-institute-item"><a class="dropdown-item" target="_blank"
-                    href="https://customer.deltape.in">Login as Institute</a></li>
+                    href="https://deltapay.in">Login as Institute</a></li>
               </ul>
             </li>
           </ul>
@@ -102,7 +102,7 @@
         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Login</a>
         <div class="dropdown-menu rounded">
           <a target="_blank" href="partner.deltape.in" class="dropdown-item">Login as Parent</a>
-          <a target="_blank" href="customer.deltape.in" class="dropdown-item">Login as Institute</a>
+          <a target="_blank" href="deltapay.in" class="dropdown-item">Login as Institute</a>
         </div>
       </div> -->
       <!-- </a> -->
@@ -116,7 +116,7 @@
   <!-- Navbar End -->
 
   <!-- Header Start -->
-  <div class="container-fluid bg-primary-header px-0 px-md-5 mb-5">
+  <div class="container-fluid bg-primary-header deltape-page-body-content px-0 px-md-5 mb-5">
     <div class="row align-items-center px-3">
       <div class="col-lg-6 text-center text-lg-left">
         <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
@@ -311,8 +311,9 @@
             <div class="card-body text-center">
               <h4 class="card-title">Delta zero</h4>
               <p class="card-text">
-                Deltape's EMI (Equated Monthly Installment) feature allows parents to pay their child's fees in
-                manageable monthly installments, making education more accessible and affordable. </p>
+                Content for DELTA ZERO : Our No Cost EMI option allows you to pay school fees in easy monthly
+                installments without any additional interest charges. This flexible payment plan helps manage your
+                finances and ensures a smooth educational journey for your child. </p>
             </div>
 
           </div>
@@ -442,7 +443,7 @@
     </div>
   </div>
 
-  <div class="container-fluid pt-5" id="HowitWorks">
+  <div class="container-fluid pt-5 HowitWorks-section" id="HowitWorks">
     <div class="container">
       <div class="text-center pb-2">
         <p class="section-title px-5">
@@ -744,8 +745,8 @@
         <div class="d-flex flex-column justify-content-start">
           <a href="/institutes.html" class="nav-item nav-link active">For Institutes</a>
           <a href="/parents.html" class="nav-item nav-link active">For Parents</a>
-          <a target="_blank" href="https://partner.deltape.in" class="nav-item nav-link active">Login for Institutes</a>
-          <a target="_blank" href="https://customer.deltape.in" class="nav-item nav-link active">Login for Parents</a>
+          <a target="_blank" href="https://deltapay.in" class="nav-item nav-link active">Login for Institutes</a>
+          <a target="_blank" href="https://deltapay.in" class="nav-item nav-link active">Login for Parents</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 mb-5 footer-quick-links">
@@ -754,13 +755,13 @@
           <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
           <a href="#Contact" class="nav-item nav-link active">Grievance Redressal</a>
           <a href="#Contact" class="nav-item nav-link active">Compliance</a>
-          <a href="#HowitWorks" class="nav-item nav-link active">Terms & Conditions</a>
-          <a href="#Benefits" class="nav-item nav-link active">Privacy Policy</a>
+          <a href="./termsandconditions.html" class="nav-item nav-link active">Terms & Conditions</a>
+          <a href="./privacypolicy.html" class="nav-item nav-link active">Privacy Policy</a>
         </div>
       </div>
 
     </div>
-    <div class="container-fluid pt-3" style="border-top: 1px solid rgba(23, 162, 184, 0.2) ;">
+    <div class="container-fluid pt-3" style="border-top: 1px solid #fff ;">
       <p class="m-0 text-center text-white">
         &copy;
         All Rights Reserved Deltape
