--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
               </a>
               <ul class="dropdown-menu">
                 <li class="dropdown-parent-item"><a class="dropdown-item" target="_blank"
-                    href="https://deltapay.in">Login as Parent</a></li>
+                    href="https://customer-main.d2kcuk3616whoz.amplifyapp.com/signin">Login as Parent</a></li>
                 <li class="dropdown-institute-item"><a class="dropdown-item" target="_blank"
-                    href="https://deltapay.in">Login as Institute</a></li>
+                    href="https://main.d10y7mao8tlm10.amplifyapp.com/signin">Login as Institute</a></li>
               </ul>
             </li>
           </ul>
@@ -745,8 +745,10 @@
         <div class="d-flex flex-column justify-content-start">
           <a href="/institutes.html" class="nav-item nav-link active">For Institutes</a>
           <a href="/parents.html" class="nav-item nav-link active">For Parents</a>
-          <a target="_blank" href="https://deltapay.in" class="nav-item nav-link active">Login for Institutes</a>
-          <a target="_blank" href="https://deltapay.in" class="nav-item nav-link active">Login for Parents</a>
+          <a target="_blank" href="https://main.d10y7mao8tlm10.amplifyapp.com/signin"
+            class="nav-item nav-link active">Login for Institutes</a>
+          <a target="_blank" href="https://customer-main.d2kcuk3616whoz.amplifyapp.com/signin"
+            class="nav-item nav-link active">Login for Parents</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 mb-5 footer-quick-links">
