--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
 
           <h1 class="mb-4 mb-4-header">About Deltape</h1>
           <p>
-            Deltape is an innovative online fee management platform designed to streamline and automate the fee
+            Deltape Technologies Private Limited is an innovative online fee management platform designed to streamline
+            and automate the fee
             collection process for educational institutes. Developed by a team of industry experts, Deltape leverages
             the
             latest technology to create a hassle-free experience for both administrators and parents. By digitalizing
@@ -766,7 +767,7 @@
     <div class="container-fluid pt-3" style="border-top: 1px solid #fff ;">
       <p class="m-0 text-center text-white">
         &copy;
-        All Rights Reserved Deltape
+        All Rights Reserved Deltape Technologies Private Limited
 
       </p>
     </div>
