--- a/index.html
+++ b/index.html
@@ -721,8 +721,10 @@
           <h4 class="fa fa-map-marker-alt text-primary"></h4>
           <div class="pl-3">
             <h5 class="text-white">Address</h5>
-            <p>#45, 9th Cross, JP Nagar, <br />
-              Bangalore - 560056
+            <p></p> No. 256, 10th Main, 1st Block,<br /> Hennur Road, Banaswadi, Bangalore North,<br /> Bangalore-
+            560043, Karnataka
+            <!-- #45, 9th Cross, JP Nagar, <br />
+              Bangalore - 560056 -->
             </p>
           </div>
         </div>
