--- a/index.html
+++ b/index.html
@@ -311,10 +311,12 @@
           <div class="card border-0 bg-light shadow-sm pb-2">
             <div class="card-body text-center">
               <h4 class="card-title">Delta zero</h4>
+              <h6>Zero-Interest Fee Installments</h6>
               <p class="card-text">
-                Content for DELTA ZERO : Our No Cost EMI option allows you to pay school fees in easy monthly
-                installments without any additional interest charges. This flexible payment plan helps manage your
-                finances and ensures a smooth educational journey for your child. </p>
+                Delta Zero offers parents the flexibility to pay school fees in easy, zero-interest installments. This
+                solution makes education more affordable by spreading out payments over time, relieving the financial
+                burden of lump-sum fees. With Delta Zero, schools can offer a stress-free payment option that empowers
+                parents to prioritize their children's education without worrying about large upfront costs.</p>
             </div>
 
           </div>
@@ -323,10 +325,12 @@
           <div class="card border-0 bg-light shadow-sm pb-2">
             <div class="card-body text-center">
               <h4 class="card-title">Delta auto</h4>
+              <h6>Automated Fee Collection</h6>
               <p class="card-text">
-                Deltape works closely with each institute to develop tailored EMI plans that cater to the diverse
-                financial needs of their parent community, ensuring a seamless and inclusive fee payment experience.
-              </p>
+                Delta Auto ensures that schools receive fees on time without the hassle of follow-ups. This system
+                automates fee collection through an auto-debit setup, allowing parents to set up payments and forget
+                about them. Schools benefit from a steady cash flow and reduced administrative tasks, while parents
+                enjoy the convenience of a seamless, automated payment process. </p>
             </div>
 
           </div>
@@ -335,10 +339,12 @@
           <div class="card border-0 bg-light shadow-sm pb-2">
             <div class="card-body text-center">
               <h4 class="card-title">Delta pay</h4>
+              <h6>Low-Cost Payment Gateway</h6>
               <p class="card-text">
-                By offering EMI options, Deltape helps educational institutes maintain a steady and predictable cash
-                flow, enabling them to better plan and allocate their resources for the benefit of their students.
-              </p>
+                Delta Pay provides a simple, cost-effective way to handle all digital fee payments. This payment gateway
+                easily integrates with your existing systems and supports all modes of digital payment. With Delta Pay,
+                schools can offer a secure and efficient payment process, enhancing the experience for both parents and
+                administrators while keeping transaction costs low. </p>
             </div>
 
           </div>
