--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- Favicon -->
-  <link href="img/favicon.ico" rel="icon" />
+  <link href="./imgnew/deltape-fav.png" rel="icon" />
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -50,7 +50,8 @@
   <div class="container-fluid bg-light position-fixed shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
       <a href="" class="navbar-brand font-weight-bold text-secondary">
-        <span class="text-primary logo-text-main">Deltape</span>
+        <span class="text-primary logo-text-main "><img class="logo-text-main-img" src="./imgnew/deltape-logo1.png" />
+        </span>
       </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
