--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 </div> -->
         <div class="collapse--navbar-collapse" id="navbarSupportedContent">
           <div class="header-login-buttons">
-            <a target="_blank" class="nav-lin1k" href="https://customer-main.d2kcuk3616whoz.amplifyapp.com/signin">
+            <a target="_blank" class="nav-lin1k" href="https://customer.deltape.in/">
               <button> Parent Login</button>
             </a>
-            <a target="_blank" class="nav-lin1k" href="https://main.d10y7mao8tlm10.amplifyapp.com/signin">
+            <a target="_blank" class="nav-lin1k" href="https://myinstitute.deltape.in/">
               <button> Institute Login</button>
             </a>
           </div>
@@ -456,9 +456,9 @@
           <div class="d-flex flex-column justify-content-start">
             <a href="/institutes.html" class="nav-item nav-link active">For Institutes</a>
             <a href="/parents.html" class="nav-item nav-link active">For Parents</a>
-            <!-- <a target="_blank" href="https://main.d10y7mao8tlm10.amplifyapp.com/signin"
+            <!-- <a target="_blank" href="https://myinstitute.deltape.in/"
               class="nav-item nav-link active">Login for Institutes</a>
-            <a target="_blank" href="https://customer-main.d2kcuk3616whoz.amplifyapp.com/signin"
+            <a target="_blank" href="https://customer.deltape.in/"
               class="nav-item nav-link active">Login for Parents</a> -->
             <a href="#aboutUs" class="nav-item nav-link active">About Us</a>
             <a href="#Contact" class="nav-item nav-link active">Contact Us</a>
