--- a/index.html
+++ b/index.html
@@ -109,13 +109,17 @@
       <div class="col-lg-6 text-center text-lg-left px-md-5">
         <!-- <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4> -->
         <h3 class="display-4 font-weight-bold main-top-header-text text-white1">
-          <span class="delta-main-color">Effortless Fee Payment Every time</span>
+          <span class="delta-main-color">Effortless Fee Payment</span>
+        </h3>
+        <h3 class="display-4 font-weight-bold main-top-header-text1 text-white2">
+          <span class="delta-main-color1"> Every time</span>
         </h3>
         <p class="text-white12 mb-4">
           Revolutionise the way your school or university collects and manages student fees with Deltape's cutting-edge
           digital solution.
         </p>
-        <a href="#" class="btn btn-primary mt-1 py-3 px-5">Learn More</a>
+        <a href="#" class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
+        <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5">Learn More</a>
       </div>
       <div class="col-lg-6 text-center text-lg-right">
         <img class="img-fluid main-img-sec mt-5" src="imgnew/home-main-right.png" alt="" />
@@ -131,19 +135,30 @@
         </div>
         <div class="Solutions-con1-right">
           <h4>Delta Zero</h4>
-          <p>Delta Zero offers parents the flexibility to pay school fees in easy, zero-interest installments. This
-            solution makes education more affordable by spreading out payments over time, relieving the financial burden
-            of lump-sum fees. With Delta Zero, schools can offer a stress-free payment option that empowers parents to
-            prioritize their children's education without worrying about large upfront costs.</p>
+          <ul class="Solutions-sec-points-sec">
+            <li>Delta Zero lets parents pay school fees in easy, zero-interest installments.
+            </li>
+            <li> It makes education affordable by spreading payments over time, easing financial stress.</li>
+            <li> Schools can offer a stress-free option, empowering parents to focus on their children’s education
+              without
+              hefty upfront costs.</li>
+
+          </ul>
         </div>
       </div>
       <div class="Our-Solutions-con1">
         <div class="Solutions-con1-right">
           <h4>Delta Auto</h4>
-          <p>Delta Auto ensures that schools receive fees on time without the hassle of follow-ups. This system
-            automates fee collection through an auto-debit setup, allowing parents to set up payments and forget about
-            them. Schools benefit from a steady cash flow and reduced administrative tasks, while parents enjoy the
-            convenience of a seamless, automated payment process.</p>
+          <ul class="Solutions-sec-points-sec">
+            <li>Delta Auto ensures that schools receive fees on time without the hassle of follow-ups.</li>
+            <li>This system
+              automates fee collection through an auto-debit setup, allowing parents to set up payments and forget about
+              them. </li>
+            <li>Schools benefit from a steady cash flow and reduced administrative tasks, while parents enjoy the
+              convenience of a seamless, automated payment process.</li>
+
+          </ul>
+
         </div>
         <div class="Solutions-con1-left">
           <img src="./imgnew/image 122.png" />
@@ -156,10 +171,17 @@
         </div>
         <div class="Solutions-con1-right">
           <h4>Delta Pay</h4>
-          <p>Delta Pay provides a simple, cost-effective way to handle all digital fee payments. This payment gateway
-            easily integrates with your existing systems and supports all modes of digital payment. With Delta Pay,
-            schools can offer a secure and efficient payment process, enhancing the experience for both parents and
-            administrators while keeping transaction costs low.</p>
+          <ul class="Solutions-sec-points-sec">
+            <li>Delta Pay provides a simple, cost-effective way to handle all digital fee payments. </li>
+            <li>This payment gateway
+              easily integrates with your existing systems and supports all modes of digital payment.</li>
+            <li>With Delta Pay,
+              schools can offer a secure and efficient payment process, enhancing the experience for both parents and
+              administrators while keeping transaction costs low.</li>
+
+          </ul>
+
+
         </div>
       </div>
     </div>
@@ -171,23 +193,37 @@
       <div class="payment-sec-box">
         <img src="./imgnew/Frame 1707482213.png" />
         <h4 class="main-new-headerh4">Automatic Debit</h4>
-        <p class="main-new-headerp">Deltape's seamless integration with banking systems allows for the automatic
-          deduction of fees from parents'
-          accounts, eliminating the need for manual processes and ensuring timely payments.</p>
+        <ul class="Solutions-sec-points-sec">
+          <li> Deltape seamlessly integrates with banking systems for automatic fee deductions from parents' accounts.
+          </li>
+          <li> Eliminates the need for manual payment processing.
+          </li>
+          <li> Ensures timely and efficient fee payments.
+          </li>
+        </ul>
       </div>
       <div class="payment-sec-box">
         <img src="./imgnew/Frame 1707482214.png" />
         <h4 class="main-new-headerh4">Intelligent Reminders</h4>
-        <p class="main-new-headerp">Deltape's advanced reminder system sends timely notifications to parents, helping
-          them stay on top of their
-          payment schedules and avoid late fees or penalties.</p>
+
+
+
+        <ul class="Solutions-sec-points-sec">
+          <li>Deltape's advanced reminder system sends timely notifications to parents.
+          </li>
+          <li> It helps parents stay on track with their payment schedules.</li>
+          <li> This prevents late fees or penalties effectively.</li>
+        </ul>
       </div>
       <div class="payment-sec-box">
         <img src="./imgnew/Frame 1707482214(1).png" />
         <h4 class="main-new-headerh4">Digital Receipting</h4>
-        <p class="main-new-headerp">Deltape provides electronic receipts for all fee payments, offering a comprehensive
-          record of transactions
-          and streamlining the accounting process for the institutes.</p>
+        <ul class="Solutions-sec-points-sec">
+          <li>Deltape provides electronic receipts for all fee payments.
+          </li>
+          <li>It offers a comprehensive record of transactions for parents and institutes</li>
+          <li>This streamlines the accounting process for educational institutes.</li>
+        </ul>
       </div>
     </div>
   </div>
@@ -231,6 +267,10 @@
   </div>
   <div class="Power-Integrations-sec">
     <div class="Power-Integrations-sec-con">
+
+      <div class="Integrations-sec-con-right">
+        <img src="./imgnew/image 140.png" />
+      </div>
       <div class="Integrations-sec-con-left">
         <h3>Power Integrations for
           Ease of Use </h3>
@@ -251,16 +291,11 @@
           </div>
         </div>
       </div>
-      <div class="Integrations-sec-con-right">
-        <img src="./imgnew/Group 1707479870.png" />
-      </div>
     </div>
   </div>
 
   <div class="USPs-of-Deltape-sec">
-    <h2 class="main-new-header">USPs of Deltape</h2>
-    <p class="main-new-headerp">Some sub heading needs to come here for the user to understand the true benefits of
-      deltape</p>
+    <h2 class="main-new-header">Deltape Benefits</h2>
     <div class="USPs-box-all">
       <div class="USPs-box-row">
         <img src="./imgnew/cash-flow (2).png" />
