--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link href="css/timeline.css" rel="stylesheet" />
   <link href="css/mystyles.css" rel="stylesheet" />
   <link href="css/faq.css" rel="stylesheet" />
+  <link href="css/mobile.css" rel="stylesheet" />
   <script type="text/javascript">
     (function (f, b) {
       if (!b.__SV) {
@@ -119,7 +120,7 @@
           digital solution.
         </p>
         <a href="#" class="btn btn-primary mt-1 py-3 px-5">Book Demo</a>
-        <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5">Learn More</a>
+        <a href="#" class="btn btn-secondary mt-1 py-3 px-5 ml-5 learn-More-btn-sec-top">Learn More</a>
       </div>
       <div class="col-lg-6 text-center text-lg-right">
         <img class="img-fluid main-img-sec mt-5" src="imgnew/home-main-right.png" alt="" />
@@ -131,10 +132,11 @@
     <div class="Our-Solutions-con">
       <div class="Our-Solutions-con1">
         <div class="Solutions-con1-left">
-          <img src="./imgnew/Group 1707479869.png" />
+          <img class="desktop-img-view" src="./imgnew/Group 1707479869.png" />
         </div>
         <div class="Solutions-con1-right">
           <h4>Delta Zero</h4>
+          <img class="mobile-img-view" src="./imgnew/Group 1707479869.png" />
           <ul class="Solutions-sec-points-sec">
             <li>Delta Zero lets parents pay school fees in easy, zero-interest installments.
             </li>
@@ -149,6 +151,7 @@
       <div class="Our-Solutions-con1">
         <div class="Solutions-con1-right">
           <h4>Delta Auto</h4>
+          <img class="mobile-img-view" src="./imgnew/image 122.png" />
           <ul class="Solutions-sec-points-sec">
             <li>Delta Auto ensures that schools receive fees on time without the hassle of follow-ups.</li>
             <li>This system
@@ -161,16 +164,17 @@
 
         </div>
         <div class="Solutions-con1-left">
-          <img src="./imgnew/image 122.png" />
+          <img class="desktop-img-view" src="./imgnew/image 122.png" />
         </div>
 
       </div>
       <div class="Our-Solutions-con1">
         <div class="Solutions-con1-left">
-          <img src="./imgnew/image 123.png" />
+          <img class="desktop-img-view" src="./imgnew/image 123.png" />
         </div>
         <div class="Solutions-con1-right">
           <h4>Delta Pay</h4>
+          <img class="mobile-img-view" src="./imgnew/image 123.png" />
           <ul class="Solutions-sec-points-sec">
             <li>Delta Pay provides a simple, cost-effective way to handle all digital fee payments. </li>
             <li>This payment gateway
